tests/suite/snapshots/suite__check__tests__check__bad_class_shadowing_5.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_class_shadowing_5.xi:3:5]
   │
 2 │     a() {}
   ·     ┬  
   ·     ╰── Previous definition here
 3 │     a: int
   ·     ┬  
   ·     ╰── Name already bound in environment
───╯

